# data_science_cookiecutter

./: .gitignore  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py
{{ cookiecutter.directory_name }}/: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.directory_name }}/.github/workflows/: ci.yml  doc_build.yml
{{ cookiecutter.directory_name }}/docs/: index.md
{{ cookiecutter.directory_name }}/docs/_source/: conf.py  index.rst  readme.rst
{{ cookiecutter.directory_name }}/src/{{ cookiecutter.package_name }/: __init__.py
{{ cookiecutter.directory_name }}/tests/: conftest.py
{{ cookiecutter.directory_name }}/tests/data/raw/pcng_postgres/: DEV_PCNG.xlsx
{{ cookiecutter.directory_name }}/tests/data/raw/textract/DEV/GLWC/: 2511083-renewal.json  2889333-renewal.json  2889803-renewal.json
{{ cookiecutter.directory_name }}/tests/data/raw/textract/DEV/WC/: 2889321-renewal.json  2889323-renewal.json  2889884-renewal.json  2889899-renewal.json  2889903-renewal.json
